--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -304,7 +304,7 @@
                                     
                                     <div class="col-xs-12">
                                         </br>
-                                        <button type="button" class="btn btn-success" ng-click="saveStaticItemInScene()">Save item</button>
+                                        <button type="button" class="btn btn-success" onclick="saveStaticItem()" ng-click="saveStaticItemInScene()">Save item</button>
                                     </div>    
                                 </div>
      
@@ -313,7 +313,10 @@
                                         <div id="staticItemsMap">
                                         </div>
 
-                                        <script type="text/javascript">                                              
+                                        <script type="text/javascript">
+                                            var overlayList = {};
+                                            var index = 0;
+                                            
                                             var staticItemsMap = new ol.Map({
                                                 target: 'staticItemsMap',
                                                 layers: [
@@ -328,7 +331,7 @@
                                                 controls: ol.control.defaults().extend([      
                                                     new ol.control.FullScreen() 
                                                 ])        
-                                            });   
+                                            });
                                             
                                             staticItemsMap.on('singleclick', function(evt) { 
                                                 var position = ol.proj.transform(evt.coordinate,'EPSG:3857', 'EPSG:4326');
@@ -336,14 +339,31 @@
                                                 var $scope = angular.element(appElement).scope();
                                                 $scope = $scope.$$childHead; 
                                                 
+                                                if(overlayList[index]){
+                                                    staticItemsMap.removeOverlay(overlayList[index]); 
+                                                }
+                                                
+                                                var staticItemType = JSON.parse($scope.newStaticItem.type);
+                                                overlayList[index] = new ol.Overlay({
+                                                    position: evt.coordinate,
+                                                    element: $('<img src="'+staticItemType.icon+'" class="img-circle">')
+                                                    .css({marginTop: '-50%', marginLeft: '-50%', width: '40px', height: '40px', cursor: 'pointer'})
+                                                });
+                                                
                                                 $('#staticItemLat').val(position[0]);
                                                 $('#staticItemLong').val(position[1]);
-                                                       
+                                                
+                                                staticItemsMap.addOverlay(overlayList[index]);
+                                                
                                                 $scope.$apply(function () {
                                                     $scope.newStaticItem.latitude = position[0];    
                                                     $scope.newStaticItem.longitude = position[1];
                                                 });
                                             });
+                                            
+                                            function saveStaticItem(){
+                                                index++;
+                                            }
                                         </script>                                      
                                 </div>
                                 
@@ -365,7 +385,7 @@
                                             <td>
                                                 <button class="btn btn-danger fa fa-trash-o" 
                                                         data-toggle="modal" data-target="#deleteStaticItemModal"
-                                                        ng-click="selectStaticItemToDeleteFromScene(staticItemElement)"></button>
+                                                        ng-click="selectStaticItemToDeleteFromScene(staticItemElement, $index)"></button>
                                             </td> 
                                         </tr>
                                     </tbody>
