--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -282,47 +282,26 @@
                                 var factor = oneKm/oneHour;
                                 
                                 var userVel = factor*vel;
-                                return (userVel*getTiemeInSecunds(userMoveRefreshInterval));
+                                return (userVel*getTiemeInSecunds(time));
                             }
                             
                             function ItemsMove(){
-                                //remove overlays
-                                console.log($scope.dynamiItemsList);
                                 var list = $scope.dynamiItemsList;
-                                
-                                //for(index in list){
-                                    //map.removeOverlay(list[index].overlay);
-                                //}
                                 
                                 var overlay = list[0].overlay;
                                 var pos = ol.proj.transform(overlay.getPosition(), 'EPSG:3857', 'EPSG:4326');
                                 var newPos = getNewPos(pos, distance(list[0].speed, dynamicItemRefreshInterval),
                                                        list[0].course[0]);
                                 
-                                console.log(pos);
-                                console.log(newPos);
-                                
                                 map.removeOverlay(overlay);
                                 
                                 list[0].overlay = new ol.Overlay({
                                     position: ol.proj.transform(newPos, 'EPSG:4326', 'EPSG:3857'),
                                     element: $('<img src="'+list[0].icon+'" class="img-circle">')
-                                    .css({marginTop: '-50%', marginLeft: '-50%', width: '32px', height: '32px', cursor: 'pointer'})        
+                                    .css({marginTop: '-50%', marginLeft: '-50%', width: '32px', height: '32px', cursor: 'pointer'})
                                 }); 
                                 
                                 map.addOverlay(list[0].overlay);
-                                /*
-                                map.removeOverlay(list[0].overlay);
-                                
-                                var pos = list[0].overlay.getPosition();
-                                var newPos = getNewPos(pos, distance(list[0].speed, dynamicItemRefreshInterval), list[0].course[0]);
-                                
-                                var overlay = list[0].overlay.setPosition(newPos);
-                                
-                                list[0].overlay = overlay;
-                                
-                                map.addOverlay(overlay);
-                                */    
                             }
                             
                             function startMoveDynamicItems(){                           
@@ -338,10 +317,7 @@
                         <button type="button" class="btn btn-default fa fa-play-circle-o" onclick="startMoveDynamicItems()">
                         </button>
                         
-                        <button type="button" class="btn btn-default fa fa-pause" onclick="stopMoveDynamicItems()">                         
-                        </button>
-                        
-                        <button type="button" class="btn btn-default fa fa-stop">                         
+                        <button type="button" class="btn btn-default fa fa-pause" onclick="stopMoveDynamicItems()">
                         </button>
                         
                         <button type="button" class="btn btn-default fa fa-download">                         
