--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -77,7 +77,8 @@
                             var userMoveTemporizador;
                             var dynamicItemMoveTemporizador;
                             var userTimeStamp;
-                            var dynamicItemRefreshInterval = 1000;
+                            var dynamicItemRefreshInterval = 500;
+                            var artists = [];
                             
                             function userMove(){
                                 if(date != new Date()){
@@ -285,39 +286,88 @@
                                 return (userVel*getTiemeInSecunds(time));
                             }
                             
-                            function ItemsMove(){
-                                var list = $scope.dynamiItemsList;
-                                
-                                var overlay = list[0].overlay;
-                                var pos = ol.proj.transform(overlay.getPosition(), 'EPSG:3857', 'EPSG:4326');
-                                var newPos = getNewPos(pos, distance(list[0].speed, dynamicItemRefreshInterval),
-                                                       list[0].course[0]);
-                                
-                                map.removeOverlay(overlay);
-                                
-                                list[0].overlay = new ol.Overlay({
-                                    position: ol.proj.transform(newPos, 'EPSG:4326', 'EPSG:3857'),
-                                    element: $('<img src="'+list[0].icon+'" class="img-circle">')
-                                    .css({marginTop: '-50%', marginLeft: '-50%', width: '32px', height: '32px', cursor: 'pointer'})
-                                }); 
-                                
-                                map.addOverlay(list[0].overlay);
+                            /* Distancia en metros entre dos punto geograficos */
+                            function distanceBetween(lon1, lat1, lon2, lat2){
+                                var R = 6357000;
+                                var difLat = lat2 - lat1;
+                                var difLon = lon2 - lon1;
+                                var a = (Math.sin(difLat/2)*Math.sin(difLat/2))+
+                                    Math.cos(lat1)*Math.cos(lat2)*Math.sin(difLon/2)*Math.sin(difLon/2);
+                                var c = 2*Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+                                return R*c;
                             }
                             
-                            function startMoveDynamicItems(){                           
+                            function ItemsMove(){
+                                var list = $scope.dynamiItemsList;
+                            
+                                for(index in list){
+                                    var overlay = list[index].overlay;
+                                    var i = artists[index];
+                        
+                                    var lon2 = toRad(parseFloat(list[index].route[i+1].routeId.longitude));
+                                    var lat2 = toRad(parseFloat(list[index].route[i+1].routeId.latitude));
+                                    
+                                    //calculamos la distancia entre el punto actual y el final
+                                    var pos = ol.proj.transform(overlay.getPosition(), 'EPSG:3857', 'EPSG:4326'); 
+                                   
+                                    var disAct = distanceBetween(toRad(pos[1]), toRad(pos[0]), lon2, lat2);
+                                    
+                                    //calculamos la distancia a recorrer
+                                    var disToRec = distance(list[0].speed, dynamicItemRefreshInterval);
+                                    
+                                    var newPos;
+                                    var difDist = disAct - disToRec; 
+                                    
+                                    if(disToRec < disAct){
+                                        newPos = getNewPos(pos, distance(list[index].speed, dynamicItemRefreshInterval),
+                                                       list[index].course[i]);
+                                    }else{
+                                        newPos = [parseFloat(list[index].route[i+1].routeId.latitude), 
+                                                 parseFloat(list[index].route[i+1].routeId.longitude)];
+                                        
+                                        artists[index] = artists[index]+1;
+                                    }
+                                    
+                                    map.removeOverlay(overlay);
+
+                                    list[index].overlay = new ol.Overlay({
+                                        position: ol.proj.transform(newPos, 'EPSG:4326', 'EPSG:3857'),
+                                        element: $('<img src="'+list[0].icon+'" class="img-circle">')
+                                        .css({marginTop: '-50%', marginLeft: '-50%', width: '32px', 
+                                              height: '32px', cursor: 'pointer'})
+                                    }); 
+
+                                    map.addOverlay(list[index].overlay);   
+                                }
+                            }
+                            
+                            function startMoveDynamicItems(){
+                                if(artists.length == 0){
+                                    for(index in $scope.dynamiItemsList){
+                                        artists[index] = 0;
+                                    }
+                                }
+                                
                                 dynamicItemMoveTemporizador = window.setInterval('ItemsMove()', dynamicItemRefreshInterval);
+                                $scope.$apply(function(){
+                                    $scope.showPlay = false;
+                                });
+                                
                             }              
                             
                             function stopMoveDynamicItems(){
                                 dynamicItemMoveTemporizador = window.clearInterval(dynamicItemMoveTemporizador);
+                                $scope.$apply(function(){
+                                    $scope.showPlay = true;
+                                });
                             }
                         </script>
                     
                     <div class="col-sm-4">
-                        <button type="button" class="btn btn-default fa fa-play-circle-o" onclick="startMoveDynamicItems()">
+                        <button type="button" ng-show="showPlay" class="btn btn-default fa fa-play-circle-o" onclick="startMoveDynamicItems()">
                         </button>
                         
-                        <button type="button" class="btn btn-default fa fa-pause" onclick="stopMoveDynamicItems()">
+                        <button type="button" ng-hide="showPlay" class="btn btn-default fa fa-pause" onclick="stopMoveDynamicItems()">
                         </button>
                         
                         <button type="button" class="btn btn-default fa fa-download">                         
