--- a/public/views/maps/newMap.html
+++ b/public/views/maps/newMap.html
@@ -626,6 +626,7 @@
                                     <th>Recommender settings</th>
                                     <th>Number of static items</th>
                                     <th>Number of dynamic items</th>
+                                    <th>City</th>
                                     <th></th>
                                 </tr>
                             </thead>
