--- a/public/views/maps/editMap.html
+++ b/public/views/maps/editMap.html
@@ -606,7 +606,8 @@
                             </div>
                             
                     </div>     
-                </div>                         
+                </div>     
+
         </div>   
             
             
@@ -634,7 +635,7 @@
                                     <td>{{scene.city}}</td>
                                     <td>
                                         <button class="btn btn-primary fa fa-pencil-square-o" 
-                                                onclick="window.location.href='#/map/editScene'"></button>
+                                                ng-click="editScene(scene)"></button>
                                         
                                         <button class="btn btn-danger fa fa-trash-o" 
                                                 data-toggle="modal" 
