--- a/public/views/maps/editScene.html
+++ b/public/views/maps/editScene.html
@@ -22,6 +22,24 @@
         </nav>            
 
         <div id="page-wrapper">		
+            <div class="alert alert-dismissable alert-danger" ng-repeat="errorMsg in errorMsgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgHide(errorMsg)">&times;</button>
+                {{errorMsg}}
+            </div>      
+            
+            <div class="alert alert-dismissable alert-success" ng-repeat="msg in msgList">
+                <button type="button" 
+                        class="close" 
+                        data-dismiss="alert" 
+                        aria-hidden="true" 
+                        ng-click="msgSuccessHide(msg)">&times;</button>
+                {{msg}}
+            </div>            
+            
             <div class="panel-body">  
                 <div class="panel panel-primary">
                     <div class="panel-heading">
