--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -8,7 +8,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#/">Simulator</a>
+                    <a class="navbar-brand" href="#/" ng-click="exit()">Simulator</a>
                 </div>
 
                 <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -17,6 +17,7 @@
                         <li class="active"><a href="#/simulator"><i class="fa fa-globe"></i> Simulation</a></li>
                         <li><a href="#/settings"><i class="fa fa-cog"></i> Settings</a></li>
                         <li><a href="#/profile"><i class="fa fa-edit"></i> Profile</a></li>
+                        <li><a href="#/" ng-click="exit()"><i class="fa fa-power-off"></i> Exit</a></li>
                     </ul>
                 </div>		
             </nav>
