--- a/public/views/simulator/index.html
+++ b/public/views/simulator/index.html
@@ -60,6 +60,7 @@
             
             <div id="page-wrapper" ng-show="simulationDataLoaded">		                
                 <div class="row">    
+                    <button ng-click="listar()">Listar</button>
                     <div id="mapa" class="mapa col-sm-8">
                     </div>
                         <script src="javascripts/socketsIO/socket.io.js"></script>
