--- a/Recommender/.settings/org.eclipse.wst.common.component
+++ b/Recommender/.settings/org.eclipse.wst.common.component
@@ -2,9 +2,8 @@
     <wb-module deploy-name="Recommender">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/java"/>
-        <property name="context-root" value="Recommender"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <property name="java-output-path" value="/Recommender/target/classes"/>
+        <property name="context-root" value="Recommender"/>
     </wb-module>
 </project-modules>
