--- a/public/views/settings/recommenderSettings.html
+++ b/public/views/settings/recommenderSettings.html
@@ -1,4 +1,23 @@
-<div ng-init="getRecommenderList()">    
+<script src="javascripts/socketsIO/socket.io.js"></script>        
+<script type="text/javascript">
+    var socket = io();
+    
+    socket.on('strategies result', function(data){
+        var stategyTypeList = [];
+        for(index in data.strategies){
+            stategyTypeList.push(data.strategies[index].type);
+        }
+        
+        var appElement = document.querySelector('[ng-app=app]');
+        var $scope = angular.element(appElement).scope();
+        $scope = $scope.$$childHead;
+        $scope.$apply(function(){
+            $scope.strategyList = stategyTypeList;    
+        });
+    });
+</script>
+
+<div ng-init="loadData()">    
     <div id="wrapper">
         <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">    
             <div class="navbar-header">
@@ -69,12 +88,22 @@
                             </div>
                             
                             <div class="col-sm-4">
+                                <label>Strategy type</label>
+                                <select ng-model="rec.strategyType" class="form-control">
+                                    <option ng-repeat="strategy in strategyList"     
+                                            value="{{strategy}}">{{strategy}}
+                                    </option>    
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-4">
+                                <br/>
                                 <label>Maximum distance to go (meters)</label>
                                 <input  ng-model="rec.maxDistanceToGo" class="form-control" />
                             </div>
                             
                             <div class="col-sm-4">
-                                </br>
+                                <br/>
                                 <label>Visibility radius (meters)</label>
                                 <input ng-model="rec.visibilityRadius" class="form-control" type="text">
                             </div>
@@ -82,7 +111,7 @@
                             <div class="col-sm-4">
                                 </br>
                                 <label>Number of items to recommend</label>
-                                <input ng-model="rec.numItemToRec" class="form-control" type="text">
+                                <input ng-model="rec.numItemToRecs" class="form-control" type="text">
                             </div>
                             
                              <div class="col-sm-4">
@@ -110,6 +139,7 @@
                             <tr>
                                 <td><strong>Pool name</strong></td>
                                 <td><strong>Recommender type</strong></td>
+                                <td><strong>Strategy type</strong></td>
                                 <td><strong>Maximum distance to go (meters)</strong></td>
                                 <td><strong>Visibility radius (meters)</strong></td>
                                 <td><strong>Number of items to recommend</strong></td>
@@ -122,6 +152,7 @@
                             <tr ng-repeat="recommender in recommenderList">
                                 <td>{{recommender.poolName}}</td>
                                 <td>{{recommender.recommenderType}}</td>
+                                <td>{{recommender.strategyType}}</td>
                                 <td>{{recommender.maximuDistanteToGo}}</td>
                                 <td>{{recommender.visibilityRadius}}</td>
                                 <td>{{recommender.itemsToRecommend}}</td>
@@ -206,6 +237,15 @@
                                 <select ng-model="selectEditRecommenderValue.recommenderType" class="form-control">
                                     <option value="push">Push</option>
                                     <option value="pull">Pull</option>
+                                </select>
+                            </div>
+                            
+                            <div class="col-sm-4">
+                                <label>Strategy type</label>
+                                <select ng-model="selectEditRecommenderValue.strategyType" class="form-control">
+                                    <option ng-repeat="strategy in strategyList"     
+                                            value="{{strategy}}">{{strategy}}
+                                    </option>
                                 </select>
                             </div>
                             
